Adding Weapons to Monsters

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button type="submit">Submit</button>
         <br>
         <br>
-        <div id="armourSelector" class="d-flex gap-3 flex-wrap">
+        <div id="armourSelector" class="d-flex gap-3 flex-wrap" style="display: none;">
             <!-- style="display: none;" -->
             <label class="form-label" for="armour" id="Armour Container">What Armour type are we looking at:</label>
         </div>
