--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
         <div id="responseDisplay"></div>
     </form>
 
-    <script id="buildArmourList">
+    <!--<script id="buildArmourList">
         function handleDropdownItemClick(armourName) {
             // Perform an action based on the selected dropdown item
             console.log(`Selected item: ${armourName}`);
@@ -205,7 +205,8 @@
                     // Handle fetch errors
                 });
         })
-    </script >
+    </script >-->
+    <script src="WebpageScripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
